<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="414dp"
        android:layout_height="540dp"
        android:background="@color/violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <Button
            android:id="@+id/btPayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/base"
            android:text="@string/payer" />

        <EditText
            android:id="@+id/editTxtSomme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginTop="100dp"
            android:hint="@string/entrersomme"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/etat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btPayer"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/donnation"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/donation"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <Button
        android:id="@+id/retour"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/retour"
        android:backgroundTint="@color/base"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

</androidx.constraintlayout.widget.ConstraintLayout>