<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="414dp"
        android:layout_height="540dp"
        android:background="@color/violet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/envoyer"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/base"
        android:gravity="center"
        android:text="@string/envoyer"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <TextView
        android:id="@+id/partager"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/partager"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/retour"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/base"
        android:gravity="center"
        android:text="@string/retour"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:text="@string/numero"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:text="@string/message"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="196dp"
        android:textColor="@color/white"
        android:layout_height="72dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="phone"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="320dp"
        android:layout_height="152dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:foregroundGravity="top"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:visibility="visible" />



</androidx.constraintlayout.widget.ConstraintLayout>