<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7400B8"
    >

    <ImageView
        android:id="@+id/felicitation"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/felicitation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#7400B8"
        >

        <TextView
            android:id="@+id/bilanBonneReponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="Bonne reponse"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/bilanMauvaiseReponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="Mauvaise Reponse"
            android:textStyle="bold"
            android:textColor="@color/red"

            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/recommencerQuiz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_choix"
            android:gravity="center"
            android:text="@string/rejouer"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/partagerRes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_choix"
            android:gravity="center"
            android:text="@string/partager"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retourAcceuilQuiz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_choix"
            android:gravity="center"
            android:text="@string/acceuil"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>